--- a/src/locales/it.jsonc
+++ b/src/locales/it.jsonc
@@ -100,6 +100,7 @@
       "tailwindcss": "https://tailwindcss.com/",
       "tomcat": "https://tomcat.apache.org/",
       "typescript": "https://www.typescriptlang.org/",
+      "vercel": "https://vercel.com/",
       "vim": "https://www.vim.org/",
       "vite": "https://vite.dev/",
       "vmwareworkstation": "https://www.vmware.com/",
